--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                    <img src="images/logo3.png.png" alt="logo">
+                    <img src="images/logo3.png.png" alt="">
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-symbols-outlined">close</span>
@@ -35,8 +35,8 @@
                     <h3>Заказы</h3>
                 </a>
                 <a href="#">
-                    <span class="material-symbols-outlined">insights</span>
-                    <h3>Аналитика</h3>
+                    <span class="material-symbols-outlined">badge</span>
+                    <h3>Сотрудники</h3>
                 </a>
                 <a href="#">
                     <span class="material-symbols-outlined">mail_outline</span>
@@ -45,7 +45,7 @@
                 </a>
                 <a href="#">
                     <span class="material-symbols-outlined">inventory</span>
-                    <h3>Отчеты</h3>
+                    <h3>Документы</h3>
                 </a>
                 <a href="#">
                     <span class="material-symbols-outlined">settings</span>
@@ -183,6 +183,107 @@
             </div>
         </main>
     
+        <div class="right">
+            <div class="top">
+                <button id="menu-btn">
+                    <span class="material-symbols-outlined">menu</span>
+                </button>
+                <div class="theme-toggler">
+                    <span class="material-symbols-outlined active">light_mode</span>
+                    <span class="material-symbols-outlined">dark_mode</span>
+                </div>
+                <div class="profile">
+                    <div class="info">
+                        <p>Привет, <b>Сергей</b></p>
+                        <small class="text-muted">Админ</small>
+                    </div>
+                    <div class="profile-photo">
+                        <img src="images/profilePhoto.png" alt="Avatar">
+                    </div>
+                </div>
+            </div>
+
+            <div class="recent-updates">
+                <h2>Последние обновления</h2>
+                <div class="updates">
+                    <div class="update">
+                        <div class="profile-photo">
+                            <img src="images/tomHardy.png" alt="photo">
+                        </div>
+                        <div class="message">
+                            <p><b>Том Харди</b> получил свой заказ на Квадрокоптер</p>
+                            <small class="text-muted">7 минут назад</small>
+                        </div>
+                    </div>
+                    <div class="update">
+                        <div class="profile-photo">
+                            <img src="images/iohanson.png" alt="photo">
+                        </div>
+                        <div class="message">
+                            <p><b>Скарлетт Йоханссон</b> получила свой заказ на Квадрокоптер</p>
+                            <small class="text-muted">13 минут назад</small>
+                        </div>
+                    </div>
+                    <div class="update">
+                        <div class="profile-photo">
+                            <img src="images/joli.png" alt="photo">
+                        </div>
+                        <div class="message">
+                            <p><b>Анджелина Джоли</b> получила свой заказ на Квадрокоптер</p>
+                            <small class="text-muted">20 минут назад</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sales-analytics">
+                <h2>Aналитика продаж</h2>
+                <div class="item online">
+                    <div class="icon">
+                        <span class="material-symbols-outlined">shopping_cart</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>Oнлайн-заказы</h3>
+                            <small class="text-muted">За последние 24 часа</small>
+                        </div>
+                        <h5 class="success">+39%</h5>
+                        <h3>3849</h3>
+                    </div>
+                </div>
+                <div class="item offline">
+                    <div class="icon">
+                        <span class="material-symbols-outlined">local_mall</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>Офлайн-заказы</h3>
+                            <small class="text-muted">За последние 24 часа</small>
+                        </div>
+                        <h5 class="danger">-21%</h5>
+                        <h3>1277</h3>
+                    </div>
+                </div>
+                <div class="item customers">
+                    <div class="icon">
+                        <span class="material-symbols-outlined">person</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>Hовые клиенты</h3>
+                            <small class="text-muted">За последние 24 часа</small>
+                        </div>
+                        <h5 class="success">+23%</h5>
+                        <h3>849</h3>
+                    </div>
+                </div>
+                <div class="item add-product">
+                    <div>
+                        <span class="material-symbols-outlined">add</span>
+                        <h3>Добавить продукт</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
